--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,10 @@
       }
     ],
     "paths": {
+      "@auth/*": ["./features/auth/*"],
+      "@admin/*": ["./features/admin/*"],
+      "@public/*": ["./features/public/*"],
+      "@error/*": ["./features/error/*"],
       "@/*": ["./*"]
     }
   },
